# mental-health-rag

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/transcripts/: session_001.txt  session_002.txt  session_003.txt  session_004.txt  session_005.txt  session_006.txt  session_007.txt  session_008.txt  session_009.txt  session_010.txt  session_011.txt  session_012.txt
outputs/: retrieval_example.json  sample_api_response.json  sample_summary.json
scripts/: generate_figures.py
src/: __init__.py  api.py  config.py  ingest.py  logging_config.py  main.py  models.py  prompts.py  retriever.py  summarizer.py
tests/: __init__.py  conftest.py  test_api.py  test_ingest.py  test_logging.py  test_models.py  test_retriever.py  test_risk_assessment.py
