[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mental-health-rag"
version = "1.0.0"
description = "Retrieval-Augmented Generation pipeline that ingests therapy session transcripts into a vector database and generates structured clinical summaries with risk assessment, similar-session retrieval, and a REST API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Kavosh Monfared" },
]
keywords = ["rag", "mental-health", "therapy", "chromadb", "langchain", "fastapi", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "chromadb>=0.4.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/kavosh-monfared/mental-health-rag"
Repository = "https://github.com/kavosh-monfared/mental-health-rag"

[project.scripts]
mental-health-rag = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
